@@ -362,6 +362,7 @@ tasks.withType(Test) {
         '--add-opens', 'java.base/java.io=ALL-UNNAMED',
         '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
         '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.time=ALL-UNNAMED',
     ]
 }
 
